# tests/Commands/test_openapi.yaml
@@ -1548,8 +1548,6 @@ components:
                       e_mail: john.doe@foo.com
                       phone: 1234-567890
                       nationality: GB
-                  created_at: '2019-01-21 01:00:00'
-                  updated_at: '2019-01-21 01:00:00'
                 -
                   id: 2
                   notes: 'Second evaluation notes'
@@ -1570,8 +1568,6 @@ components:
                       last_name: Doe
                       e_mail: jane.doe@bar.com
                       nationality: CA
-                  created_at: '2019-01-19 01:00:00'
-                  updated_at: '2019-01-19 01:00:00'
     Evaluation:
       description: 'Response returning an internship evaluation'
       content:
@@ -1619,8 +1615,6 @@ components:
                     e_mail: john.doe@foo.com
                     phone: 1234-567890
                     nationality: GB
-                created_at: '2019-01-21 01:00:00'
-                updated_at: '2019-01-21 01:00:00'
     InterruptionReports:
       description: 'Response returning a list of internship interruption reports'
       content:
@@ -1671,8 +1665,6 @@ components:
                       e_mail: john.doe@foo.com
                       phone: 1234-567890
                       nationality: GB
-                  created_at: '2019-01-21 01:00:00'
-                  updated_at: '2019-01-21 01:00:00'
                 -
                   id: 2
                   notes: 'Second interruption report notes'
@@ -1693,8 +1685,6 @@ components:
                       last_name: Doe
                       e_mail: jane.doe@bar.com
                       nationality: CA
-                  created_at: '2019-01-19 01:00:00'
-                  updated_at: '2019-01-19 01:00:00'
     InterruptionReport:
       description: 'Response returning an internship interruption report'
       content:
@@ -1742,8 +1732,6 @@ components:
                     e_mail: john.doe@foo.com
                     phone: 1234-567890
                     nationality: GB
-                created_at: '2019-01-21 01:00:00'
-                updated_at: '2019-01-21 01:00:00'
     Eligibilities:
       description: 'Response returning a list of eligibilities'
       content:
@@ -2181,15 +2169,8 @@ components:
               type: integer
             internship:
               $ref: '#/components/schemas/Internship'
-            created_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
-            updated_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
           required:
             - id
-            - created_at
           additionalProperties: false
       example:
         id: 1
@@ -2212,8 +2193,6 @@ components:
             e_mail: john.doe@foo.com
             phone: 1234-567890
             nationality: GB
-        created_at: '2019-01-21 01:00:00'
-        updated_at: '2019-01-21 01:00:00'
     NewInterruptionReport:
       type: object
       properties:
@@ -2240,15 +2219,8 @@ components:
               type: integer
             internship:
               $ref: '#/components/schemas/Internship'
-            created_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
-            updated_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
           required:
             - id
-            - created_at
           additionalProperties: false
       example:
         id: 1
@@ -2271,8 +2243,6 @@ components:
             e_mail: john.doe@foo.com
             phone: 1234-567890
             nationality: GB
-        created_at: '2019-01-21 01:00:00'
-        updated_at: '2019-01-21 01:00:00'
     NewEligibility:
       type: object
       properties:
